jarvis update docs swagger
